--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,8 @@ on: push
 jobs:
   go-prereqs:
     name: Go Prerequisites
-    runs-on: 'ubuntu-latest'
+    #runs-on: 'ubuntu-latest'
+    runs-on: 'golang'
     env:
        GO_VERSION: 1.15.6
 
@@ -20,7 +21,8 @@ jobs:
 
   go-codes:
     name: Build Go Codes
-    runs-on: 'ubuntu-latest'
+    #runs-on: 'ubuntu-latest'
+    runs-on: 'golang'
 
     steps:
       - name: Checkout Repository
