--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,9 @@ jobs:
     name: Build Go Codes
     #runs-on: 'ubuntu-latest'
     runs-on: 'golang'
+    env:
+       GO_PATH: "/usr/local/go/bin/go"
+
 
     steps:
       - name: Checkout Repository
@@ -30,8 +33,8 @@ jobs:
 
       - name: Test Hello Code
         run: |
-          go run hello.go
+          ${{ env.GO_PATH }} run hello.go
 
       - name: Other Codes
         run: |
-          go run console_code/console-code.go 3 4
+          ${{ env.GO_PATH }} run console_code/console-code.go 3 4
