--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,14 +1,20 @@
 name: GoLang Project Pipeline
 
-on: push
+on: [push, pull_request]
+
+env:
+  GO_VERSION: 1.15.6
+  GO_PATH: "/usr/local/go/bin/go"
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
   go-prereqs:
     name: Go Prerequisites
     runs-on: 'ubuntu-latest'
     #runs-on: 'golang'
-    env:
-       GO_VERSION: 1.15.6
 
     steps:
       - name: Install Go ${{ env.GO_VERSION }}
@@ -19,25 +25,30 @@ jobs:
 
       - name: Test Prerequisites
         run: |
-          /usr/local/go/bin/go version
+          ${{ env.GO_PATH }} version
 
 
   go-codes:
     name: Build Go Codes
     runs-on: 'ubuntu-latest'
     #runs-on: 'golang'
-    env:
-       GO_PATH: "/usr/local/go/bin/go"
+    #env:
+    #   GO_PATH: "/usr/local/go/bin/go"
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Install Go ${{ env.GO_VERSION }}
+        run: |
+          sudo wget https://dl.google.com/go/go${{ env.GO_VERSION }}.linux-amd64.tar.gz
+          sudo tar -C /usr/local -xzf go${{ env.GO_VERSION }}.linux-amd64.tar.gz
+          sudo rm go${{ env.GO_VERSION }}.linux-amd64.tar.gz
+
       - name: Check Go Executables
         run: |
-         ls -l /usr/local
-          #${{ env.GO_PATH }} run hello.go
+          ${{ env.GO_PATH }} run hello.go
 
-      #- name: Other Codes
-      #  run: |
-      #    ${{ env.GO_PATH }} run console_code/console-code.go 3 4
+      - name: Other Codes
+        run: |
+          ${{ env.GO_PATH }} run console_code/console-code.go 3 4
