--- a/pipeline_templates/multistage.yaml
+++ b/pipeline_templates/multistage.yaml
@@ -14,6 +14,7 @@ jobs:
   go-prereqs:
     name: Go Prerequisites
     runs-on: 'ubuntu-latest'
+    #runs-on: 'golang'
 
     steps:
       - name: Install Go ${{ env.GO_VERSION }}
@@ -30,6 +31,9 @@ jobs:
   go-codes:
     name: Build Go Codes
     runs-on: 'ubuntu-latest'
+    #runs-on: 'golang'
+    #env:
+    #   GO_PATH: "/usr/local/go/bin/go"
 
     steps:
       - name: Checkout Repository
@@ -43,8 +47,8 @@ jobs:
 
       - name: Run Hello World
         run: |
-          go run hello.go
+          ${{ env.GO_PATH }} run hello.go
 
       - name: Run Console App
         run: |
-          go run console_code/console-code.go 3 4
+          ${{ env.GO_PATH }} run console_code/console-code.go 3 4
