--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,8 +10,8 @@ jobs:
   build:
     runs-on: self-hosted
 
-    #container:
-    #  image: golang:1.14-buster   
+    container:
+      image: golang:1.14-buster   
 
     steps:
       - name: Checkout Repository
