testing go using container

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,9 +19,8 @@ jobs:
 
       - name: Run Hello World
         run: |
-          #go --version
-          whoami
-          #go run hello.go
+          go --version
+          go run hello.go
 
       #- name: Run Console App
       #  run: |
