--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,7 @@ jobs:
 
 
   go-code-builds:
+    needs: [build-prereqs]
     runs-on: self-hosted
     container:
       image: golang:1.14-buster
@@ -32,6 +33,7 @@ jobs:
 
 
   uche-algorithm-tests:
+    needs: [build-prereqs]
     runs-on: self-hosted
     container:
       image: golang:1.14-buster
