--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,12 @@
 name: Golang-Builds
 
-on: [push]
+on: 
+ push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-prereqs:
