updating new tests

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Make All
         run: |
-          make1 all
+          make all
 
 
   go-code-builds:
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run Console App
         run: |
-          go run console_code1/console-code.go 3 4
+          go run console_code/console-code.go 3 4
 
 
   uche-algorithm-tests:
