--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches:
       - main
+  check_suite:
+    types:
+      - completed
+  status: {}
 
 jobs:
   build-prereqs:
