--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,12 @@ jobs:
         run: |
           go run hello.go
 
+      - name: PR Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: Begining Pull Request Test
+
   go-make:
     needs: [build-prereqs]
     runs-on: self-hosted
@@ -85,7 +91,17 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Slack Notifications
+        if: success()
         uses: rtCamp/action-slack-notify@v2
         env:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: Build Succeeded
+            SLACK_COLOR: green
 
+      - name: Slack Notifications
+        if: failure()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: Build Failed
+            SLACK_COLOR: red
