--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,11 +26,11 @@ jobs:
         run: |
           go run hello.go
 
-      - name: PR Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_TITLE: Begining Pull Request Test
+      #- name: PR Slack Notification
+      #  uses: rtCamp/action-slack-notify@v2
+      #  env:
+      #      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      #      SLACK_TITLE: Begining Pull Request Test
 
   go-make:
     needs: [build-prereqs]
@@ -91,7 +91,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Slack Notifications
-        if: success()
+        if: ${{ success() }}
         uses: rtCamp/action-slack-notify@v2
         env:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
@@ -99,7 +99,7 @@ jobs:
             SLACK_COLOR: green
 
       - name: Slack Notifications
-        if: failure()
+        if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
         env:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
