--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Two Sum Algorithm
         run: |
           cd datastructure_algorithms/two_sum/
-          go run twosum.go
+          go run 1twosum.go
           go test -v -run TestTwoSum1
           go test -v -run TestTwoSum2
 
