--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Two Sum Algorithm
         run: |
           cd datastructure_algorithms/two_sum/
-          go run twosum.go
+          go run 2twosum.go
           go test -v -run TestTwoSum1
           go test -v -run TestTwoSum2
 
@@ -48,6 +48,7 @@ jobs:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
             SLACK_TITLE: Build Succeeded
             SLACK_COLOR: '#00cc00'
+            SLACK_MESSAGE: 'Build Passed. Merge and Deploy'
 
       - name: Slack Notification Failure
         if: ${{ failure() }}
@@ -56,3 +57,4 @@ jobs:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
             SLACK_TITLE: Build Failed
             SLACK_COLOR: '#ff0000'
+            SLACK_MESSAGE: 'Build Failed. Do not deploy this build'
