--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,22 +1,10 @@
 name: Golang-Builds
 
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  check_suite:
-    types:
-      - completed
-  status: {}
+on: [push] 
 
 jobs:
   build:
-    runs-on: self-hosted
-    container:
-      image: golang:1.14-buster   
+    runs-on: 'ubuntu-latest'
 
     steps:
       - name: Checkout Repository
@@ -40,21 +28,3 @@ jobs:
           go run twosum.go
           go test -v -run TestTwoSum1
           go test -v -run TestTwoSum2
-
-      - name: Slack Notification Success
-        if: ${{ success() }}
-        uses: rtCamp/action-slack-notify@v2
-        env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_TITLE: Build Succeeded
-            SLACK_COLOR: '#00cc00'
-            SLACK_MESSAGE: 'Build Passed. Merge and Deploy'
-
-      - name: Slack Notification Failure
-        if: ${{ failure() }}
-        uses: rtCamp/action-slack-notify@v2
-        env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_TITLE: Build Failed
-            SLACK_COLOR: '#ff0000'
-            SLACK_MESSAGE: 'Build Failed. Do not deploy this build'
