--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,15 @@
 name: Golang-Builds
 
-on: [push] 
+on: 
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches: 
+      - main 
 
 jobs:
-  build:
+  build-prereqs:
     runs-on: 'ubuntu-latest'
 
     steps:
@@ -17,6 +23,15 @@ jobs:
       - name: Make All
         run: |
           make all
+
+
+
+  algorithms:
+    runs-on: 'ubuntu-latest'
+    needs: build-prereqs
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
       - name: Run Console App
         run: |
