--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,6 @@ on:
 jobs:
   build-prereqs:
     runs-on: 'ubuntu-latest'
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -26,16 +25,29 @@ jobs:
 
 
 
-  algorithms:
+  go-cheetsheet:
     runs-on: 'ubuntu-latest'
     needs: build-prereqs
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Basic File Processing
+        run: |
+          go run file_processing/filep.go
+
       - name: Run Console App
         run: |
           go run console_code/console-code.go 3 4
+
+
+
+  algorithms:
+    runs-on: 'ubuntu-latest'
+    needs: build-prereqs
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
       - name: Run Two Sum Algorithm
         run: |
