--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,7 @@ jobs:
           make all
 
 
+
   go-sampleproblems:
     runs-on: 'ubuntu-latest'
     needs: build-prereqs
@@ -34,7 +35,6 @@ jobs:
       - name: Basic File Processing
         run: |
           go run file_processing/filep.go
-
 
   go-cheetsheet:
     runs-on: 'ubuntu-latest'
@@ -50,8 +50,16 @@ jobs:
 
 
 
+  algorithms-reqs:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: Algorithm Reqs
+        run: |
+          echo "Algorithms Section"
+
   algorithms:
     runs-on: 'ubuntu-latest'
+    needs: algorithms-reqs
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -65,14 +73,10 @@ jobs:
 
 
 
-
   deploy:
     runs-on: 'ubuntu-latest'
     needs: [algorithms,go-cheetsheet,go-sampleproblems]
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
       - name: Deploy Artifacts
         run: |
-          echo "Code Pipeline Completed
+          echo "Code Pipeline Completed"
