--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,6 +36,10 @@ jobs:
         run: |
           go run file_processing/filep.go
 
+      - name: Factorial Recursion
+        run: |
+          go run functions/factorial.go
+
   go-cheetsheet:
     runs-on: 'ubuntu-latest'
     needs: build-prereqs
