--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,23 +1,6 @@
-name: Golang-Builds
+name: Builds
 
-on: 
-  #push:
-  #  branches: 
-  #    - main
-  #pull_request:
-  #  branches: 
-  #    - main 
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Define env name'     
-        required: true
-        default: 'prod'
-      branch:
-        description: 'Define branch name'     
-        required: true
-        default: 'master'
-
+on: [push] 
 
 jobs:
   build-prereqs:
@@ -26,85 +9,81 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Run Hello World
-        run: |
-          go run hello.go
-
       - name: Make All
         run: |
           make all
 
 
 
-  go-sampleproblems:
-    runs-on: 'ubuntu-latest'
-    needs: build-prereqs
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #go-sampleproblems:
+  #  runs-on: 'ubuntu-latest'
+  #  needs: build-prereqs
+  #  steps:
+  #    - name: Checkout Repository
+  #      uses: actions/checkout@v2
 
-      - name: Basic File Processing
-        run: |
-          go run file_processing/filep.go
+  #    - name: Basic File Processing
+  #      run: |
+  #        go run file_processing/filep.go
 
-      - name: Factorial Recursion
-        run: |
-          go run functions/factorial.go
+  #    - name: Factorial Recursion
+  #      run: |
+  #        go run functions/factorial.go
 
-  go-cheetsheet:
-    runs-on: 'ubuntu-latest'
-    needs: build-prereqs
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #go-cheetsheet:
+  #  runs-on: 'ubuntu-latest'
+  #  needs: build-prereqs
+  #  steps:
+  #    - name: Checkout Repository
+  #      uses: actions/checkout@v2
 
-      - name: Run Console App
-        run: |
-          go run console_code/console-code.go 3 4
+  #    - name: Run Console App
+  #      run: |
+  #        go run console_code/console-code.go 3 4
 
-  go-unittests:
-    runs-on: 'ubuntu-latest'
-    needs: build-prereqs
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #go-unittests:
+  #  runs-on: 'ubuntu-latest'
+  #  needs: build-prereqs
+  #  steps:
+  #    - name: Checkout Repository
+  #      uses: actions/checkout@v2
 
-      - name: Run Sample Go Unit Tests
-        run: |
-          cd unit_tests
-          go test -v -cover
-
-
+  #    - name: Run Sample Go Unit Tests
+  #      run: |
+  #        cd unit_tests
+  #        go test -v -cover
 
 
 
-  algorithms-reqs:
-    runs-on: 'ubuntu-latest'
-    steps:
-      - name: Algorithm Reqs
-        run: |
-          echo "Algorithms Section"
-
-  algorithms:
-    runs-on: 'ubuntu-latest'
-    needs: algorithms-reqs
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Run Two Sum Algorithm
-        run: |
-          cd datastructure_algorithms/two_sum/
-          go run twosum.go
-          go test -v -run TestTwoSum1
-          go test -v -run TestTwoSum2
 
 
+  #algorithms-reqs:
+  #  runs-on: 'ubuntu-latest'
+  #  steps:
+  #    - name: Algorithm Reqs
+  #      run: |
+  #        echo "Algorithms Section"
 
-  deploy:
-    runs-on: 'ubuntu-latest'
-    needs: [algorithms,go-cheetsheet,go-sampleproblems,go-unittests]
-    steps:
-      - name: Deploy Artifacts
-        run: |
-          echo "Code Pipeline Completed"
+  #algorithms:
+  #  runs-on: 'ubuntu-latest'
+  #  needs: algorithms-reqs
+  #  steps:
+  #    - name: Checkout Repository
+  #      uses: actions/checkout@v2
+
+  #    - name: Run Two Sum Algorithm
+  #      run: |
+  #        cd datastructure_algorithms/two_sum/
+  #        go run twosum.go
+  #        go test -v -run TestTwoSum1
+  #        go test -v -run TestTwoSum2
+
+
+
+  #deploy:
+  #  runs-on: 'ubuntu-latest'
+  #  needs: [algorithms,go-cheetsheet,go-sampleproblems,go-unittests]
+  #  steps:
+  #    - name: Deploy Artifacts
+  #      run: |
+  #        echo "Code Pipeline Completed"
