--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,15 @@ jobs:
         run: |
           make all
 
+      - uses: nashmaniac/create-issue-action@v1.1
+        if: ${{ failure() }} # only run when this job is failed.
+        name: Create Issue Action
+        with:
+    	  title: Linter Failed
+	  token: ${{secrets.GITHUB_TOKEN}}
+	  assignees: ${{github.actor}}
+	  labels: refactoring-needed, help needed
+	  body: Workflow failed for commit ${{github.sha}}
 
 
   #go-sampleproblems:
