updating env variable

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Go Scripts 
-        shell: bash {0}
         run: |
-           go run hello.go
+           env
+           #go run hello.go
+        shell: bash {0}
