updating en variables

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,5 +11,7 @@ jobs:
 
       - name: Go Scripts 
         run: |
-           go run hello.go
+           go version
+           env
+           #go run hello.go
         shell: bash {0}
