--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,3 +50,21 @@ jobs:
         run: |
            go run datastructure_algorithms/convert_mins_secs/main.go
         shell: bash {0}
+
+      - name: Slack Notification Success
+        if: ${{ success() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: Build Succeeded
+            SLACK_COLOR: '#00cc00'
+            SLACK_MESSAGE: 'Build Passed. Merge and Deploy'
+
+      - name: Slack Notification Failure
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: Build Failed
+            SLACK_COLOR: '#ff0000'
+            SLACK_MESSAGE: 'Build Failed. Do not deploy this build'
