--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Go Conditions
         run: |
-           go run my_tutorials/conditionals/main.go
+           go run my_tutorials/conditionals/main.go1
         shell: bash {0}
 
 
@@ -56,7 +56,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_TITLE: Build Succeeded
+            SLACK_TITLE: GO-Algorithms Build Succeeded
             SLACK_COLOR: '#00cc00'
             SLACK_MESSAGE: 'Build Passed. Merge and Deploy'
 
@@ -65,6 +65,6 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
             SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_TITLE: Build Failed
+            SLACK_TITLE: GO-Algorithms Build Failed
             SLACK_COLOR: '#ff0000'
             SLACK_MESSAGE: 'Build Failed. Do not deploy this build'
