--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,6 +38,26 @@ jobs:
            go run my_tutorials/conditionals/main.go-orig
         shell: bash {0}
 
+      - name: Slack Notification Success
+        if: ${{ success() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: GO-Conditions Build Succeeded
+            SLACK_COLOR: '#00cc00'
+            SLACK_MESSAGE: 'Build Passed. Merge and Deploy'
+
+      - name: Slack Notification Failure
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_TITLE: GO-Conditions Build Failed
+            SLACK_COLOR: '#ff0000'
+            SLACK_MESSAGE: 'Build Failed. Do not deploy this build'
+
+
+
 
   go-algorithms:
     runs-on: 'cicd'
