--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Go Conditions
         run: |
-           go run my_tutorials/conditionals/main.go-orig
+           go run my_tutorials/conditionals/main.go
         shell: bash {0}
 
       - name: Slack Notification Success
