--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,9 +12,21 @@ on:
     - staging 
     - develop
 
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'  
+
+
+
+
 jobs:
   go-script:
-    runs-on: 'cicd'
+    runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
