update new workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,16 +1,16 @@
 name: GO-CICD-Build
 
 on: 
-  push: 
-    branches: 
-    - main 
-    - staging
-    - develop 
-  pull_request: 
-    branches: 
-    - main 
-    - staging 
-    - develop
+  #push: 
+  #  branches: 
+  #  - main 
+  #  - staging
+  #  - develop 
+  #pull_request: 
+  #  branches: 
+  #  - main 
+  #  - staging 
+  #  - develop
 
   workflow_dispatch:
     inputs:
