--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,6 @@
 name: GO-CICD-Build
 
 on: 
-  #push: 
-  #  branches: 
-  #  - main 
-  #  - staging
-  #  - develop 
-  #pull_request: 
-  #  branches: 
-  #  - main 
-  #  - staging 
-  #  - develop
-
   workflow_dispatch:
     inputs:
       logLevel:
@@ -20,6 +9,7 @@ on:
         default: 'warning'
       tags:
         description: 'Test scenario tags'  
+        required: false
 
 
 
