--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: GO-CICD-Build
+name: GOLang-Build
 
 on: 
   push:
@@ -19,34 +19,5 @@ jobs:
 
       - name: Go Scripts 
         run: |
-           #go version
-           #go run hello.go
            echo "Hello World"
         shell: bash {0}
-
-
-  #go-conditions:
-  #  runs-on: 'cicd'
-  #  needs: go-script
-  #  steps:
-  #    - name: Checkout Repository
-  #      uses: actions/checkout@v2
-
-  #    - name: Go Conditions
-  #      run: |
-  #         go run my_tutorials/conditionals/main.go
-  #      shell: bash {0}
-
-
-
-  #go-algorithms:
-  #  runs-on: 'cicd'
-  #  needs: go-script
-  #  steps:
-  #    - name: Checkout Repository
-  #      uses: actions/checkout@v2
-
-  #    - name: Minutes To Seconds
-  #      run: |
-  #         go run datastructure_algorithms/convert_mins_secs/main.go
-  #      shell: bash {0}
