updating new build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,16 +8,29 @@ on:
     branches:
       - main
 
+env:
+  GO_VERSION: 1.15.x # [1.14.x, 1.15.x]
 
 
 jobs:
+  shell-script:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: Shell Inline Script 
+        run: |
+           echo "Hello World"
+        shell: bash {0}
+
   go-script:
     runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Get GoLang 
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
       - name: Go Scripts 
-        run: |
-           echo "Hello World"
-        shell: bash {0}
+        run: go run hello.go
