--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,14 @@
 name: GOLang-Build
 
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on:
+  schedule:    
+  - cron: "*/5 * * * *" 
+  #push:
+  #  branches:
+  #    - main
+  #pull_request:
+  #  branches:
+  #    - main
 
 env:
   GO_VERSION: 1.15.x # [1.14.x, 1.15.x]
