--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,8 @@ name: Daily-Build
 
 on: 
   schedule:    
-  - cron: '*/5 * * * *' 
+  - cron: '0 0 * * *' #end of day 
+  #- cron: '*/5 * * * *' #every 5 minutes 
   #push:
   #  branches:
   #    - main
