--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,15 @@
 name: Daily-Build
 
 on: 
-  schedule:    
-  - cron: '0 0 * * *' #end of day 
+  #schedule:    
+  #- cron: '0 0 * * *' #end of day 
   #- cron: '*/5 * * * *' #every 5 minutes 
-  #push:
-  #  branches:
-  #    - main
-  #pull_request:
-  #  branches:
-  #    - main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 env:
   GO_VERSION: 1.15.x #[1.14.x, 1.15.x]
