--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,42 +6,44 @@ on:
   #- cron: '*/5 * * * *' #every 5 minutes 
   push:
     branches:
-      - main
+    - main
   pull_request:
     branches:
-      - main
+    - main
 
 env:
   GO_VERSION: 1.15.x #[1.14.x, 1.15.x]
+
+defaults:
+  run:
+    shell: bash {0}
 
 
 jobs:
   shell-script:
     runs-on: 'ubuntu-latest'
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: Shell Inline Script 
-        run: |
-           echo "Hello World"
-        shell: bash {0}
+    - name: Shell Inline Script 
+      run: |
+         echo "Hello World"
 
 
   go-script:
     runs-on: 'ubuntu-latest'
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: Get GoLang 
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ env.GO_VERSION }}
+    - name: Get GoLang 
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ env.GO_VERSION }}
 
-      - name: Go Scripts 
-        run: go run hello.go
+    - name: Go Scripts 
+      run: go run hello.go
 
-      - name: Make Go Script
-        run: make all
-        shell: bash {0}
+    - name: Make Go Script
+      run: make all
