--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,17 +45,17 @@ jobs:
       run: make all
 
 
-  projects:
-    runs-on: 'golang'
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+  #projects:
+  #  runs-on: 'golang'
+  #  steps:
+  #  - name: Checkout Repository
+  #    uses: actions/checkout@v2
 
-    - name: Get GoLang 
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ env.GO_VERSION }}
+  #  - name: Get GoLang 
+  #    uses: actions/setup-go@v2
+  #    with:
+  #      go-version: ${{ env.GO_VERSION }}
 
-    - name: Sonaqube Scan
-      run: |
-          /opt/sonar-scanner/bin/sonar-scanner -Dsonar.host.url=${{ secrets.SONAR_HOST }} -Dsonar.login=${{ secrets.SONAR_TOKEN }} 
+  #  - name: Sonaqube Scan
+  #    run: |
+  #        /opt/sonar-scanner/bin/sonar-scanner -Dsonar.host.url=${{ secrets.SONAR_HOST }} -Dsonar.login=${{ secrets.SONAR_TOKEN }} 
